✅ feat: add footer

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 			rel="shortcut icon"
 			type="image/x-icon"
 		/>
+		<link
+			href="//db.onlinewebfonts.com/c/9b06ae83a4412168ed194a8ed31218c2?family=Mabry+Pro+Medium"
+			rel="stylesheet"
+			type="text/css"
+		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Gumroad – Sell what you know and see what sticks</title>
 	</head>
